Fix for double scrollbar

--- a/_static/css/waitmodaldialog.css
+++ b/_static/css/waitmodaldialog.css
@@ -1,6 +1,9 @@
 .modal {
     z-index: 9999999;
 }
+.modal-open{
+    overflow: hidden!important;
+}
 
 .questionnaire-modal-content {
     position: absolute;
